--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
   },
   "dependencies": {
     "axios": "^1.5.0",
+    "echarts": "^5.4.3",
     "js-cookie": "^3.0.5",
     "pinia": "^2.1.6",
     "vue": "^3.3.4",
+    "vue-animate-number": "^0.4.2",
     "vue-router": "^4.2.4"
   },
   "lint-staged": {
